also fixed overflow-y on tabs

--- a/styles.css
+++ b/styles.css
@@ -401,6 +401,8 @@ background-color: white;
   display: none
 }
 #tabD2{
+	overflow-y: auto;
+	overflow-x: hidden;
 background-color: white;
   width: 80%;
   border: 14px inset #7765AD;
@@ -416,7 +418,7 @@ background-color: white;
 }
 #descotab{
 font-family: Arial, Helvetica, sans-serif;
-font-size: 35px;
+font-size: 30px;
 letter-spacing: 0px;
 word-spacing: 2px;
 color: #545454;
@@ -571,7 +573,7 @@ border-radius:50px;
     width:130px; 
     margin: -20px -65px; 
     position:relative;
-    top:50%; 
+    top:80%; 
     left:50%;
 }
 
